tweak nav bar to fix cutoffs and funny button

--- a/assets/nav.css
+++ b/assets/nav.css
@@ -94,6 +94,7 @@
 
 .buttons-wrapper {
   height: 50px;
+  display: flex;
   z-index: 100;
 }
 .contact {
@@ -205,8 +206,7 @@
 .nav ul li a {
   color: #000;
   font-family: "Raleway", sans-serif;
-  text-decoration: none;
-  font-size: 18px;
+  text-decoration: none; 
   padding-bottom: 10px;
   border-bottom: ;
 }
